# src/app/api-svc/model/apiResponseLong.ts
@@ -10,15 +10,11 @@
  * Do not edit the class manually.
  */
 
-import { SafeUrl } from "@angular/platform-browser";
 
-
-export interface Category { 
-    id?: number;
-    name?: string;
-    description?: string;
-    imgUrl: SafeUrl;
-    categoryImageByte?: Array<string>;
-    parent_id?: number;
+export interface ApiResponseLong { 
+    result?: number;
+    errorCode?: string;
+    message?: object;
+    responseCode?: number;
 }
 
