# src/app/api-svc/model/pageBrand.ts
@@ -15,16 +15,16 @@ import { Sort } from './sort';
 
 
 export interface PageBrand { 
-    totalElements?: number;
     totalPages?: number;
+    totalElements?: number;
     size?: number;
     content?: Array<Brand>;
     number?: number;
     sort?: Sort;
-    first?: boolean;
-    last?: boolean;
     numberOfElements?: number;
     pageable?: PageableObject;
+    first?: boolean;
+    last?: boolean;
     empty?: boolean;
 }
 
