# src/app/api-svc/model/pageRole.ts
@@ -15,16 +15,16 @@ import { Sort } from './sort';
 
 
 export interface PageRole { 
-    totalElements?: number;
     totalPages?: number;
+    totalElements?: number;
     size?: number;
     content?: Array<Role>;
     number?: number;
     sort?: Sort;
-    first?: boolean;
-    last?: boolean;
     numberOfElements?: number;
     pageable?: PageableObject;
+    first?: boolean;
+    last?: boolean;
     empty?: boolean;
 }
 
